assets/k8s/assets.yaml
apiVersion: v1
kind: Service
metadata:
  name: assets
  namespace: dev
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: assets
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assets
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assets
  template:
    metadata:
      labels:
        app: assets
    spec:
      terminationGracePeriodSeconds: 5
      volumes:
        - name: local-config
          configMap:
            name: local-config
            items:
              - key: config.yaml
                path: config.yaml
      containers:
        - name: assets-service
          image: assets-service:latest
          imagePullPolicy: "IfNotPresent"
          volumeMounts:
            - mountPath: /etc/assets/
              name: local-config
          ports:
            - containerPort: 8080
              name: public
